fix: remove overflow

--- a/gempuzzle/styles.scss
+++ b/gempuzzle/styles.scss
@@ -11,10 +11,6 @@
     font-style: normal;
 }
 
-html {
-    overflow: hidden;
-}
-
 body {
     margin: 0 auto;
     min-height: 100vh;
